@@ -12,11 +12,41 @@ set auto_index(::vfs::ftp::handler) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::stat) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::access) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::open) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::ftp::_closing) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::ftp::_findFtpInfo) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::matchindirectory) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::createdirectory) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::removedirectory) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::deletefile) [list source [file join $dir ftpvfs.tcl]]
 set auto_index(::vfs::ftp::fileattributes) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::ftp::utime) [list source [file join $dir ftpvfs.tcl]]
+set auto_index(::vfs::mk4::Mount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::Unmount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::handler) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::utime) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::matchindirectory) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::stat) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::access) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::open) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::createdirectory) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::removedirectory) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::deletefile) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::vfs::mk4::fileattributes) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::init) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::mount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::_commit) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::umount) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::stat) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::driver) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::do_close) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::mkdir) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::getdir) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::mtime) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::delete) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::find/file) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::mk4vfs::find/dir) [list source [file join $dir mk4vfs.tcl]]
+set auto_index(::scripdoc::init) [list source [file join $dir scripdoc.tcl]]
+set auto_index(::scripdoc::extendPath) [list source [file join $dir scripdoc.tcl]]
 set auto_index(::vfs::tclproc::Mount) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::tclproc::Unmount) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::tclproc::handler) [list source [file join $dir tclprocvfs.tcl]]
@@ -30,7 +60,9 @@ set auto_index(::vfs::tclproc::createdirectory) [list source [file join $dir tcl
 set auto_index(::vfs::tclproc::removedirectory) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::tclproc::deletefile) [list source [file join $dir tclprocvfs.tcl]]
 set auto_index(::vfs::tclproc::fileattributes) [list source [file join $dir tclprocvfs.tcl]]
-set auto_index(::vfs::testMount) [list source [file join $dir testvfs.tcl]]
+set auto_index(::vfs::tclproc::utime) [list source [file join $dir tclprocvfs.tcl]]
+set auto_index(::vfs::test::Mount) [list source [file join $dir testvfs.tcl]]
+set auto_index(::vfs::test::Unmount) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::handler) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::stat) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::access) [list source [file join $dir testvfs.tcl]]
@@ -40,8 +72,14 @@ set auto_index(::vfs::test::createdirectory) [list source [file join $dir testvf
 set auto_index(::vfs::test::removedirectory) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::deletefile) [list source [file join $dir testvfs.tcl]]
 set auto_index(::vfs::test::fileattributes) [list source [file join $dir testvfs.tcl]]
+set auto_index(::vfs::test::utime) [list source [file join $dir testvfs.tcl]]
+set auto_index(::vfs::debug) [list source [file join $dir vfs.tcl]]
+set auto_index(::vfs::log) [list source [file join $dir vfs.tcl]]
 set auto_index(::vfs::autoMountExtension) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::autoMountUrl) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::log) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::RegisterMount) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::unmount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::haveMount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::urlMount) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::fileUrlMount) [list source [file join $dir vfsUtils.tcl]]
@@ -52,7 +90,12 @@ set auto_index(::vfs::accessMode) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::matchDirectories) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::matchFiles) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::modeToString) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::listAttributes) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::indexToAttribute) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::attributesGet) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::attributesSet) [list source [file join $dir vfsUtils.tcl]]
 set auto_index(::vfs::posixError) [list source [file join $dir vfsUtils.tcl]]
+set auto_index(::vfs::zip::Execute) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Mount) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::Unmount) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::handler) [list source [file join $dir zipvfs.tcl]]
@@ -64,6 +107,7 @@ set auto_index(::vfs::zip::createdirectory) [list source [file join $dir zipvfs.
 set auto_index(::vfs::zip::removedirectory) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::deletefile) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::vfs::zip::fileattributes) [list source [file join $dir zipvfs.tcl]]
+set auto_index(::vfs::zip::utime) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::zip::u_short) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::zip::DosTime) [list source [file join $dir zipvfs.tcl]]
 set auto_index(::zip::Data) [list source [file join $dir zipvfs.tcl]]
